--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-DATABASE_URL=postgresql://username:password@localhost:5432/todo_app
+#DATABASE_URL=postgresql://username:password@localhost:5432/todo_app
+DATABASE_URL=postgresql://todo_user:todo_password@db:5432/todo_app
